Source/Alternet.UI.Pal/Api/ImageList.Api.h

// <auto-generated> DO NOT MODIFY MANUALLY. Copyright (c) 2026 AlterNET Software.</auto-generated>

#pragma once

#include "ImageList.h"
#include "Image.h"
#include "ApiUtils.h"
#include "Exceptions.h"

using namespace Alternet::UI;

ALTERNET_UI_API ImageList* ImageList_Create_()
{
    return MarshalExceptions<ImageList*>([&](){
        return new ImageList();
    });
}

ALTERNET_UI_API int ImageList_GetPixelImageSizeX_(ImageList* obj)
{
    return MarshalExceptions<int>([&](){
        return obj->GetPixelImageSizeX();
    });
}

ALTERNET_UI_API int ImageList_GetPixelImageSizeY_(ImageList* obj)
{
    return MarshalExceptions<int>([&](){
        return obj->GetPixelImageSizeY();
    });
}

ALTERNET_UI_API float ImageList_GetImageSizeX_(ImageList* obj)
{
    return MarshalExceptions<float>([&](){
        return obj->GetImageSizeX();
    });
}

ALTERNET_UI_API float ImageList_GetImageSizeY_(ImageList* obj)
{
    return MarshalExceptions<float>([&](){
        return obj->GetImageSizeY();
    });
}

ALTERNET_UI_API void ImageList_AddImage_(ImageList* obj, Image* image)
{
    MarshalExceptions<void>([&](){
        obj->AddImage(image);
    });
}

ALTERNET_UI_API void ImageList_SetImageSize_(ImageList* obj, float sizeX, float sizeY)
{
    MarshalExceptions<void>([&](){
        obj->SetImageSize(sizeX, sizeY);
    });
}

ALTERNET_UI_API void ImageList_SetPixelImageSize_(ImageList* obj, int sizeX, int sizeY)
{
    MarshalExceptions<void>([&](){
        obj->SetPixelImageSize(sizeX, sizeY);
    });
}

ALTERNET_UI_API c_bool ImageList_Remove_(ImageList* obj, int index)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->Remove(index);
    });
}

ALTERNET_UI_API c_bool ImageList_Clear_(ImageList* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->Clear();
    });
}