Source/Alternet.UI/Native/ImageList.Generated.cs

// <auto-generated> DO NOT MODIFY MANUALLY. Copyright (c) 2026 AlterNET Software.</auto-generated>
#nullable enable
#pragma warning disable

using System;
using System.Runtime.InteropServices;
using System.ComponentModel;
using System.Security;
namespace Alternet.UI.Native
{
    internal partial class ImageList : NativeObject
    {
        static ImageList()
        {
        }
        
        public ImageList()
        {
            SetNativePointer(NativeApi.ImageList_Create_());
        }
        
        public ImageList(IntPtr nativePointer) : base(nativePointer)
        {
        }
        
        public int PixelImageSizeX
        {
            get
            {
                CheckDisposed();
                return NativeApi.ImageList_GetPixelImageSizeX_(NativePointer);
            }
            
        }
        
        public int PixelImageSizeY
        {
            get
            {
                CheckDisposed();
                return NativeApi.ImageList_GetPixelImageSizeY_(NativePointer);
            }
            
        }
        
        public float ImageSizeX
        {
            get
            {
                CheckDisposed();
                return NativeApi.ImageList_GetImageSizeX_(NativePointer);
            }
            
        }
        
        public float ImageSizeY
        {
            get
            {
                CheckDisposed();
                return NativeApi.ImageList_GetImageSizeY_(NativePointer);
            }
            
        }
        
        public void AddImage(Image image)
        {
            CheckDisposed();
            NativeApi.ImageList_AddImage_(NativePointer, image.NativePointer);
        }
        
        public void SetImageSize(float sizeX, float sizeY)
        {
            CheckDisposed();
            NativeApi.ImageList_SetImageSize_(NativePointer, sizeX, sizeY);
        }
        
        public void SetPixelImageSize(int sizeX, int sizeY)
        {
            CheckDisposed();
            NativeApi.ImageList_SetPixelImageSize_(NativePointer, sizeX, sizeY);
        }
        
        public bool Remove(int index)
        {
            CheckDisposed();
            return NativeApi.ImageList_Remove_(NativePointer, index);
        }
        
        public bool Clear()
        {
            CheckDisposed();
            return NativeApi.ImageList_Clear_(NativePointer);
        }
        
        
        [SuppressUnmanagedCodeSecurity]
        public class NativeApi : NativeApiProvider
        {
            static NativeApi() => Initialize();
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern IntPtr ImageList_Create_();
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern int ImageList_GetPixelImageSizeX_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern int ImageList_GetPixelImageSizeY_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern float ImageList_GetImageSizeX_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern float ImageList_GetImageSizeY_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void ImageList_AddImage_(IntPtr obj, IntPtr image);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void ImageList_SetImageSize_(IntPtr obj, float sizeX, float sizeY);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void ImageList_SetPixelImageSize_(IntPtr obj, int sizeX, int sizeY);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool ImageList_Remove_(IntPtr obj, int index);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool ImageList_Clear_(IntPtr obj);
            
        }
    }
}
